DO328-chapter4.1/deployment-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
      annotations: 
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: quay.io/redhattraining/ossm-maven-simplest:1.0
        name: hello
        ports:
        - containerPort: 8080
        resources: {}
status: {}
