DO328-chapter4.1/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  ports:
  - port: 8080
    name: http-port
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
status:
  loadBalancer: {}
