DO328-chapter4.1/virtualservice-hello.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
  - "*"
  gateways:
  - hello-gw
  http:
  - route:
    - destination:
        host: hello
        port:
          number: 8080
          name: http-port
